Added content to sample script, adjusted header and footer positioning, added intercut formatting.

--- a/Scriptdown.iatemplate/Contents/Resources/style.css
+++ b/Scriptdown.iatemplate/Contents/Resources/style.css
@@ -29,6 +29,14 @@ body {
 	color: #fff;
 }
 
+.header {
+    text-align: center;
+}
+
+.footer {
+    text-align: center;
+}
+
 /* Script title */
 h1 {
 	text-indent: 0;
