Added footer and header class definitions, centered them.

--- a/Scriptdown.iatemplate/Contents/Resources/style.css
+++ b/Scriptdown.iatemplate/Contents/Resources/style.css
@@ -66,7 +66,7 @@ h3 {
     text-transform: capitalize;
 }
 
-/* parenthetical — stage directions */
+/* Parenthetical — stage directions */
 h4 {
     text-indent: 1.5in;
     width: 2.5in;
